syntax = "proto3";
option go_package = "protobufMessages/";

package millionaires.Answers;

message Answer{
    int32 id = 1;
    string answer = 2;
    int32 questionId = 3;
    bool isCorrect = 4;
    int32 chosen = 5;
}

//GetNextAnswer
message GetNextAnswerRequest{
    int32 id = 1;
}
message GetNextAnswerResponse{
    Answer answer = 1;
}