syntax = "proto3";
option go_package = "protobufMessages/";

package millionaires.Questions;

import "Answers.proto";

message Question{
    int32 Id = 1;
    string Question = 2; 
    int32 Difficulty = 3;
    int32 Impressions = 4;
}

message GetQuestionRequest {
    string RunId = 1;
}

message GetQuestionResponse {
    Question Question = 1;
    repeated Answers.Answer Answers = 2;
}

message AnswerQuestionRequest {
    string RunId = 1;
    int32 AnswerId = 2;
}

message AnswerQuestionResponse{
    bool IsCorrect = 1;
    optional GetQuestionResponse NextQuestion = 2;
}
